fix: align text to center

--- a/api-projeto-site/public/css/dashboard.css
+++ b/api-projeto-site/public/css/dashboard.css
@@ -13,6 +13,11 @@ canvas {
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
+.dashboard-title-container {
+    display: flex;
+    align-items: center !important;
+}
+
 .boxGraficos {
     display: grid;
     flex-direction: row;
